--- a/index.html
+++ b/index.html
@@ -6,5 +6,63 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="logo">Header Logo</div>
+      <ul class="header-links">
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+      </ul>
+    </div>
+
+    <div class="section-one">
+      <h1>This website is awesome</h1>
+      <p>
+        This website has some subtext that goes here under the main title. It's
+        a smaller font and the color is lower contrast
+      </p>
+      <button>Sign up</button>
+      <div class="img">this is a placeholder for an image</div>
+    </div>
+
+    <div class="section-two">
+      <h2>Some random information</h2>
+      <div class="card-container">
+        <div class="card">
+          <div class="card-img"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-three">
+      <div class="quote">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All i know is that it looks nice.
+      </div>
+      <div class="author">-Thor, God of Thunder</div>
+    </div>
+
+    <div class="section-four">
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button>Sign up</button>
+    </div>
+
+    <div class="footer">Copyright © The Odin Project 2025</div>
+  </body>
 </html>
