--- a/index.html
+++ b/index.html
@@ -5,28 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="header">
-      <div class="logo">Header Logo</div>
-      <ul class="header-links">
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
-      </ul>
+    <div class="hero">
+      <div class="header">
+        <div class="logo">Header Logo</div>
+        <ul class="header-links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+        <div class="hero-img">this is a placeholder for an image</div>
+      </div>
     </div>
 
-    <div class="section-one">
-      <h1>This website is awesome</h1>
-      <p>
-        This website has some subtext that goes here under the main title. It's
-        a smaller font and the color is lower contrast
-      </p>
-      <button>Sign up</button>
-      <div class="img">this is a placeholder for an image</div>
-    </div>
-
-    <div class="section-two">
+    <div class="info">
       <h2>Some random information</h2>
       <div class="card-container">
         <div class="card">
@@ -48,7 +57,7 @@
       </div>
     </div>
 
-    <div class="section-three">
+    <div class="quotation">
       <div class="quote">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
         just filling up space, or maybe people will actually read it. Who knows?
@@ -57,9 +66,11 @@
       <div class="author">-Thor, God of Thunder</div>
     </div>
 
-    <div class="section-four">
-      <h3>Call to action! It's time!</h3>
-      <p>Sign up for our product by clicking that button right over there!</p>
+    <div class="call-to-action">
+      <div class="cta-text">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
       <button>Sign up</button>
     </div>
 
